--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -47,4 +47,9 @@
     position: absolute;
     right: -15px;
     top: -15px;
+    cursor: pointer;
+}
+
+.eliminar:hover {
+    color: rgb(174, 23, 23);
 }
