--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -53,3 +53,10 @@
 .eliminar:hover {
     color: rgb(174, 23, 23);
 }
+
+.like{
+    cursor: pointer;
+    position: absolute;
+    left: 125px;
+    top: 175px;
+}
