--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -10,6 +10,7 @@
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
+    background-image: url("/public/img/footer.png");
 }
 
 .redes img {
