--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -2,6 +2,7 @@
     width: 280px;
     margin-bottom: 24px;
     position: relative;
+    padding-top: 10px;
 }
 
 .colaborador .encabezado {
@@ -46,7 +47,7 @@
 .eliminar {
     position: absolute;
     right: -15px;
-    top: -15px;
+    top: -8px;
     cursor: pointer;
 }
 
