--- a/src/componentes/Equipo/Equipo.css
+++ b/src/componentes/Equipo/Equipo.css
@@ -14,6 +14,8 @@
     cursor: pointer;
     border-color: #212121;
     border: 2px solid;
+    width: 8%;
+    height: 7%;
 }
 
 .equipo h3{
@@ -22,6 +24,7 @@
     border-bottom: 4px solid;
     display: inline-block;
     padding-bottom: 8px;
+    text-shadow: 1px 1px 2px gray;
 }
 
 .colaboradores{
