--- a/src/componentes/ListaOpciones/ListaOpciones.css
+++ b/src/componentes/ListaOpciones/ListaOpciones.css
@@ -9,6 +9,7 @@
     font-weight: 600;
     font-family: 'Montserrat', 'sans-serif';
     margin-bottom: 8px;
+    color: rgba(0, 0, 0, 0.647);
 }
 
 .lista-opciones select{
