--- a/src/componentes/MiOrg/MiOrg.css
+++ b/src/componentes/MiOrg/MiOrg.css
@@ -11,6 +11,7 @@
     font-weight: 400;
     padding-bottom: 24px;
     border-bottom: 4px solid #6278F7;
+    text-shadow: 2px 1px 2px gray;
 }
 
 .orgSection img {
